# CppRmd

./: .gitignore
RMD1/: .gitignore
RMD1/Live/include/LogMe/: LogMe.hpp
RMD1/Live/src/: LogMe.cpp
RMD1/Ref/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  main.cpp
RMD1/Ref/include/LogMe/: LogMe.hpp
RMD1/Ref/src/: LogMe.cpp
RMD1/Train/: CMakeLists.txt
RMD1/Train/include/LogMe/: LogMe.hpp
RMD1/Train/src/: LogMe.cpp  main.cpp
RMD2/: .gitignore
RMD2/Live/: CMakeLists.txt  main.cpp
RMD2/Live/include/LogMe/: LogMe.hpp
RMD2/Live/src/: LogMe.cpp
RMD2/Ref/part0_streams/: CMakeLists.txt  main.cpp
RMD2/Ref/part0_streams/include/LogMe/: LogMe.hpp
RMD2/Ref/part0_streams/src/: LogMe.cpp
RMD2/Ref/part1_errors/: CMakeLists.txt  main.cpp
RMD2/Ref/part1_errors/include/LogMe/: LogMe.hpp
RMD2/Ref/part1_errors/src/: LogMe.cpp
RMD2/Ref/part2_hierarchy/: main.cpp
RMD2/Ref/part2_hierarchy/src/: LogMe.cpp
RMD2/Ref/part3_chain/: main.cpp
RMD2/Ref/part3_chain/src/: LogMe.cpp
RMD2/Ref/part4_chain_on_type/: CMakeLists.txt  main.cpp
RMD2/Ref/part4_chain_on_type/src/: LogMe.cpp
RMD2/Train/: main.cpp
RMD2/Train/include/LogMe/: LogMe.hpp
RMD2/Train/src/: LogMe.cpp
RMD3/Live/include/: GenericStack.hpp
RMD3/Ref/: CMakeLists.txt  ex4.cpp  ex6.cpp
RMD3/Ref/include/LogMe/: LogMe.hpp  LogMeStaticChain.hpp
RMD3/Ref/src/: LogMe.cpp
RMD3/Train/: CMakeLists.txt  main_stack.cpp
RMD3/Train/include/: GenericStack.hpp
RMD4/Train/: CMakeLists.txt  main_stack.cpp
RMD4/Train/include/: GenericStack.hpp  SpecializedStack.hpp
(+4 files in other folders)
